# rawtoaces

./: .readthedocs.yaml  CMakeLists.txt  README.md
.github/workflows/: analysis.yml  build-steps.yml  ci.yml  docs.yml
build_scripts/: install_deps_linux.bash  install_deps_mac.bash  install_deps_windows.bash  install_deps_yum.bash  vcpkg.json
cmake/: CodeCoverage.cmake
docs/: CHANGES.md  CREDITS.md
include/rawtoaces/: image_converter.h  rawtoaces_core.h
src/bindings/: CMakeLists.txt  py_util.cpp
src/docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  contributing.rst  getting_started.rst  index.rst  user_guide.rst
src/docs/api/cpp/: image_converter.rst  index.rst  rawtoaces_core.rst  spectral_data.rst
src/docs/api/python/: image_converter.rst  index.rst
src/rawtoaces/: CMakeLists.txt  main.cpp
src/rawtoaces_core/: define.h  mathOps.h  rawtoaces_core.cpp  spectral_data.cpp
src/rawtoaces_util/: CMakeLists.txt  cache_base.h  colour_transforms.cpp  colour_transforms.h  exiftool.cpp  exiftool.h  image_converter.cpp  rawtoaces_util_priv.h  transform_cache.cpp  transform_cache.h
tests/: CMakeLists.txt  run_valid.sh  testCache.cpp  testColourTransforms.cpp  testDNGIdt.cpp  testExiftool.cpp  testIDT.cpp  testMath.cpp  testMisc.cpp  testUsageTimer.cpp  test_SpectralData.cpp  test_image_converter.cpp  test_utils.cpp  test_utils.h  test_utils_image_converter.cpp  test_utils_image_converter.h  usage_example_core.cpp
tests/config_tests/util/: test_installed_util.cpp
tests/python/: test_image_converter.py
tests/static_analysis/: codechecker_skipfile.txt
